--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"@google/genai": "^0.6.1",
+		"dotenv": "^16.4.7"
 	}
 }
