--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"@google/genai": "^0.6.1",
-		"dotenv": "^16.4.7"
+		"dotenv": "^16.4.7",
+		"firebase": "^11.5.0"
 	}
 }
