--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@google/genai": "^0.6.1",
 		"dotenv": "^16.4.7",
-		"firebase": "^11.5.0"
+		"firebase": "^11.5.0",
+		"marked": "^15.0.8"
 	}
 }
